--- a/WCSTrainer/Pages/Locations/Create.cshtml
+++ b/WCSTrainer/Pages/Locations/Create.cshtml
@@ -5,26 +5,32 @@
    ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-<partial name="_Sidebar" />
-<h4>Location</h4>
-<hr />
-<div class="row">
-   <div class="col-md-4">
-      <form method="post">
-         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-         <div class="form-group">
-            <label asp-for="Location.Name" class="control-label"></label>
-            <input asp-for="Location.Name" class="form-control" />
-            <span asp-validation-for="Location.Name" class="text-danger"></span>
+<div class="panel">
+   <div class="body">
+      <partial name="_Sidebar" />
+      <div class="properties">
+         <div class="user-form">
+            <p class="title">Create New Location</p>
+            <p class="description">Fill out each required field.</p>
+            <div class="field-container">
+               <form method="post">
+                  <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                  <input hidden asp-for="Location.Id" />
+                  <div class="form-group">
+                     <div class="form">
+                        <div class="labels">
+                           <label asp-for="Location.Name" class="control-label"></label>
+                           <span asp-validation-for="Location.Name" class="text-danger"></span>
+                        </div>
+                        <input asp-for="Location.Name" class="form-control" />
+                     </div>
+                  </div>
+                  <div class="form-group">
+                     <input type="submit" value="Save" class="btn bg-btn btnGreen" />
+                  </div>
+               </form>
+            </div>
          </div>
-         <div class="form-group">
-            <input type="submit" value="Create" class="btn btn-primary" />
-         </div>
-      </form>
+      </div>
    </div>
-</div>
-
-<div>
-   <a asp-page="Index">Back to List</a>
 </div>
