--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -10,6 +10,8 @@
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
+            <p class="title">Create New Skill</p>
+            <p class="description">Fill out each required field.</p>
             <div class="field-container">
                <form method="post">
                   <div asp-validation-summary="ModelOnly" class="text-danger"></div>
