Fixed null approvate date after edit

--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -21,6 +21,7 @@
                         <input asp-for="TrainingOrder.CompletionDate" hidden value="@date" />
                      }
                      <input asp-for="TrainingOrder.CreateDate" hidden />
+                     <input asp-for="TrainingOrder.ApprovalDate" hidden />
                      <input asp-for="TrainingOrder.Medium" hidden />
                      <input asp-for="TrainingOrder.Status" type="hidden" value="Completed" />
                      <input asp-for="TrainingOrder.Duration" hidden />
