scheduling fixed trainer search

--- a/WCSTrainer/Pages/Accounts/Details.cshtml
+++ b/WCSTrainer/Pages/Accounts/Details.cshtml
@@ -10,6 +10,9 @@
          <div class="user-form">
             @if (Model.UserAccount != null) {
                <p class="title">User Account @Model.UserAccount.Id</p>
+               @if (Model.Employee != null) {
+                  <p class="description">@Model.Employee.FirstName @Model.Employee.LastName</p>
+               }
                <div class="field-container">
                   <div class="title-row">
                      <p class="title">Account Info</p>
