--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -124,7 +124,7 @@
    traineeBtn.classList.add("selected");
 
    function linkToUser() {
-      window.open('/Accounts/Details?id=' + selected.UserAccountId, '_blank');
+      window.open('/Accounts/Employees/Details?id=' + selected.Id, '_blank');
    }
 
    function toggleView(type) {
