--- a/WCSTrainer/Pages/_ViewImports.cshtml
+++ b/WCSTrainer/Pages/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @namespace WCSTrainer.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@using WCSTrainer.Pages.Shared.RazorComponents
+@using WCSTrainer.Pages.Shared.RazorComponents;
 @using WCSTrainer.Data;
+@using WCSTrainer.Helpers;
