--- a/WCSTrainer/Pages/TrainerGroups/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Edit.cshtml
@@ -24,6 +24,7 @@
                   <div class="field-container">
                      <form method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input hidden asp-for="TrainerGroup.Id" />
                         <div class="form-group">
                            <div class="form">
                               <div class="labels">
