--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -55,7 +55,7 @@
                                  <p class="control-label">Lesson</p>
                                  <span asp-validation-for="TrainingOrder.LessonId" class="text-danger"></span>
                               </div>
-                              <input asp-for="TrainingOrder.LessonId" class="form-control" />
+                              <select asp-for="TrainingOrder.LessonId" class="form-control" asp-items="@Model.LessonSelectList"></select>
                            </div>
                         </div>
                         <div class="form-group">
