--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -139,7 +139,7 @@
                                  <p class="control-label">Lesson</p>
                                  <span asp-validation-for="TrainingOrder.LessonId" class="text-danger"></span>
                               </div>
-                              <input asp-for="TrainingOrder.LessonId" class="form-control" />
+                              <select asp-for="TrainingOrder.LessonId" class="form-control" asp-items="@Model.LessonSelectList"></select>
                            </div>
                         }
                         @if (!Model.TrainingOrder.Status.Equals("Awaiting Approval")) {
